# xsf

./: .clang-format  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSES_bundled  LICENSES_bundled.txt  README.md  meson.build  meson_options.txt  pixi.toml
.github/: PULL_REQUEST_TEMPLATE.md  label-filename.yml  label-title.yml
.github/workflows/: coverage.yml  format.yml  gpu_tests.yml  issue-labeler.yml  label-pr-on-close.yml  label-pr-on-open.yml  linux.yml  tests.yml
include/xsf/: agm.h  alg.h  amos.h  bessel.h  binom.h  boxcox.h  cdflib.h  config.h  convex_analysis.h  cosine.h  cupy.h  digamma.h  digamma_inv.h  digammainv.h  erf.h  error.h  evalpoly.h  exp.h  expint.h  faddeeva.h  fp_error_metrics.h  fresnel.h  gamma.h  hyp0f1.h  hyp2f1.h  hyperu.h  inv_digamma.h  lambertw.h  legendre.h  log.h  log_exp.h  loggamma.h  mathieu.h  mathieu_legacy.h  mathieu_very_new.h  ndtri_exp.h  ndtri_reparametrizations.h  numbers.h  numpy.h  orthogonal_eval.h  (+15 more)
include/xsf/amos/: amos.h
include/xsf/cephes/: cbrt.h  chdtr.h  ellpj.h  erfinv.h  expn.h  igam.h  incbet.h  j0.h  j1.h  kn.h  kolmogorov.h  lanczos.h  ndtr.h  ndtri.h  numbers.h  poch.h  polevl.h  round.h  shichi.h  sindg.h  spence.h  struve.h  tandg.h  trig.h  tukey.h  unity.h  yn.h  zetac.h
include/xsf/cpu/: hyperu.h  stats.h
include/xsf/mathieu/: LICENSE  Makefile  README.md  besseljyd.h  main.c  make_matrix.h  make_matrix_tridiagonal.h  mathieu.h  mathieu_coeffs.h  mathieu_eigs.h  mathieu_fcns.h  matrix_utils.h
include/xsf/scipy/special/: ufunc.h
include/xsf/scipy/special/special/: amos.h  config.h  sph_harm.h
include/xsf/specfun/: specfun.h
python_tests/: test_cupy.py
scipy/special/: ufunc.h
scipy/special/special/: config.h  sph_harm.h
tests/: CMakeLists.txt  Coverage.cmake  airy.cpp  expint.cpp  mathieu_debug.cpp  test_hyp2f1.cpp  testing_utils.h
tests/data/: Readme.md  exp1.csv
tests/include/: xtest.hpp
tests/include/3rd/: csv.h
tests/scipy_special_tests/: test_airy.cpp  test_airye.cpp  test_bdtr.cpp  test_bdtrc.cpp  test_bdtri.cpp  test_bei.cpp  test_beip.cpp  test_ber.cpp  test_berp.cpp  test_besselpoly.cpp  test_beta.cpp  test_betaln.cpp  test_binom.cpp  test_cbrt.cpp  test_cem.cpp  test_cem_cva.cpp  test_chdtr.cpp  test_chdtrc.cpp  test_chdtri.cpp  test_cosdg.cpp  test_cosm1.cpp  test_cospi.cpp  test_cotdg.cpp  test_cyl_bessel_i.cpp  test_cyl_bessel_i0.cpp  test_cyl_bessel_i0e.cpp  test_cyl_bessel_i1.cpp  test_cyl_bessel_i1e.cpp  test_cyl_bessel_ie.cpp  test_cyl_bessel_j.cpp  test_cyl_bessel_j0.cpp  test_cyl_bessel_j1.cpp  test_cyl_bessel_je.cpp  test_cyl_bessel_k.cpp  test_cyl_bessel_k0.cpp  test_cyl_bessel_k0e.cpp  test_cyl_bessel_k1.cpp  test_cyl_bessel_k1e.cpp  test_cyl_bessel_ke.cpp  test_cyl_bessel_y.cpp  (+136 more)
tests/xsf_tests/: README.md  test_agm.cpp  test_amos.cpp  test_assoc_legendre_p.cpp  test_bessel_functions_right_tail.cpp  test_bivariate_normal_cdf.cpp  test_bivariate_normal_sf.cpp  test_boxcox.cpp  test_bvnu.cpp  test_cdf_cvm.cpp  test_cdf_cvm_inf.cpp  test_convex_analysis.cpp  test_cosine.cpp  test_cyl_bessel_all.cpp  test_cyl_bessel_k.cpp  test_digamma.cpp  test_digamma_inv.cpp  test_digammainv.cpp  test_ellpj.cpp  test_gdtix_gdtria.cpp  test_gdtria_gdtrix.cpp  test_hyp0f1.cpp  test_hyp2f1.cpp  test_hypergeometric.cpp  test_hyperu.cpp  test_inv_digamma.cpp  test_itj0y0.cpp  test_j0_right_tail.cpp  test_j0y0_tiny_x.cpp  test_j1_left_tail.cpp  test_kendall_dis.cpp  test_lambertw.cpp  test_lpmv.cpp  test_mathieu.cpp  test_mathieu_tridiagonal.cpp  test_ndtri_exp.cpp  test_ndtri_reparametrizations.cpp  test_numbers.cpp  test_orthogonal_eval.cpp  test_poisson_binom.cpp  (+11 more)
